Completed internal type safety for State & Item implementation